--- a/TelecomX_BR.ipynb
+++ b/TelecomX_BR.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 24,
       "metadata": {
         "id": "1--uPM88l7JH"
       },
@@ -59,7 +59,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [
         {
@@ -89,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [
         {
@@ -128,7 +128,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [
         {
@@ -137,7 +137,7 @@
               "['customerID', 'Churn', 'customer', 'phone', 'internet', 'account']"
             ]
           },
-          "execution_count": 2,
+          "execution_count": 27,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -158,7 +158,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 28,
       "metadata": {},
       "outputs": [
         {
@@ -351,7 +351,7 @@
               "[7267 rows x 6 columns]"
             ]
           },
-          "execution_count": 23,
+          "execution_count": 28,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -363,7 +363,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 74,
       "metadata": {},
       "outputs": [
         {
@@ -505,19 +505,20 @@
               "[7267 rows x 5 columns]"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 74,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "dados_normalizados = pd.json_normalize(dados['customer'])\n",
-        "dados_normalizados"
+        "dados_normalizados2 = dados_normalizados\n",
+        "dados_normalizados2"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 30,
       "metadata": {},
       "outputs": [
         {
@@ -543,39 +544,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 95,
       "metadata": {},
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "0       0\n",
-              "1       0\n",
-              "2       0\n",
-              "3       1\n",
-              "4       1\n",
-              "       ..\n",
-              "7262    0\n",
-              "7263    0\n",
-              "7264    0\n",
-              "7265    0\n",
-              "7266    0\n",
-              "Name: customer.SeniorCitizen, Length: 7267, dtype: int64"
-            ]
-          },
-          "execution_count": 28,
-          "metadata": {},
-          "output_type": "execute_result"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0    6085\n",
+            "1    1182\n",
+            "Name: SeniorCitizen, dtype: int64\n"
+          ]
         }
       ],
       "source": [
-        "dados_normalizados['customer.SeniorCitizen'] = pd.to_numeric(dados_normalizados['customer.SeniorCitizen'], errors='coerce')\n",
-        "dados_normalizados['customer.SeniorCitizen']"
+        "print(dados_normalizados2['SeniorCitizen'].value_counts())"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 33,
       "metadata": {},
       "outputs": [
         {
@@ -730,7 +718,7 @@
               "[7267 rows x 5 columns]"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 33,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -742,7 +730,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [
         {
@@ -848,7 +836,7 @@
               "[7267 rows x 2 columns]"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 34,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -860,7 +848,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 35,
       "metadata": {},
       "outputs": [
         {
@@ -1039,7 +1027,7 @@
               "[7267 rows x 7 columns]"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 35,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1051,7 +1039,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 36,
       "metadata": {},
       "outputs": [
         {
@@ -1230,7 +1218,7 @@
               "[7267 rows x 7 columns]"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 36,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1248,7 +1236,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 37,
       "metadata": {},
       "outputs": [
         {
@@ -1321,7 +1309,7 @@
               "[7267 rows x 0 columns]"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 37,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1333,7 +1321,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 38,
       "metadata": {
         "id": "bsm-WTLjmHvt"
       },
