--- a/TelecomX_BR.ipynb
+++ b/TelecomX_BR.ipynb
@@ -362,6 +362,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "📊 Carga e análise"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 6,
       "metadata": {},
@@ -518,6 +525,31 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 15,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "gender\n",
+              "Male      3675\n",
+              "Female    3592\n",
+              "dtype: int64"
+            ]
+          },
+          "execution_count": 15,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "dados_normalizados3 = dados_normalizados2[['gender']].copy()\n",
+        "dados_normalizados4 = dados_normalizados3.value_counts()\n",
+        "dados_normalizados4"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 7,
       "metadata": {},
       "outputs": [
@@ -544,7 +576,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -572,7 +604,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -900,7 +932,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -994,7 +1026,7 @@
               "[7267 rows x 1 columns]"
             ]
           },
-          "execution_count": 36,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1008,7 +1040,46 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 17,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "gender  Churn\n",
+            "Male    No       2625\n",
+            "Female  No       2549\n",
+            "        Yes       939\n",
+            "Male    Yes       930\n",
+            "                  120\n",
+            "Female            104\n",
+            "dtype: int64\n",
+            "\n",
+            " Churn          No  Yes\n",
+            "gender                \n",
+            "Female  104  2549  939\n",
+            "Male    120  2625  930\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Crie um DataFrame apenas com as duas colunas desejadas\n",
+        "df_genero_churn = dados_normalizados2[['gender']].copy()\n",
+        "df_genero_churn['Churn'] = dados['Churn'].values\n",
+        "\n",
+        "# Veja a contagem cruzada (quantos homens/mulheres cancelaram ou não)\n",
+        "analise = df_genero_churn.value_counts()\n",
+        "print(analise)\n",
+        "\n",
+        "# Ou, para uma tabela mais visual:\n",
+        "tabela_cruzada = pd.crosstab(df_genero_churn['gender'], df_genero_churn['Churn'])\n",
+        "print(\"\\n\", tabela_cruzada)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -1021,7 +1092,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 35,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
