--- a/TelecomX_BR.ipynb
+++ b/TelecomX_BR.ipynb
@@ -1112,6 +1112,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Fazendo uma análise do arquivo TelecomX_Data.json, perceberam-se alguns insights importantes para a conclusão de alguns informações relevantes quanto o motivo do cancelamento do serviço por parte de alguns clientes.\n",
+        "Vejamos eles:\n",
+        "Primeiro, 1869 pessoas cancelaram o serviço, enquanto 5174 permaneceram como clientes."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
