--- a/TelecomX_BR.ipynb
+++ b/TelecomX_BR.ipynb
@@ -1245,11 +1245,15 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Fazendo uma análise do arquivo TelecomX_Data.json, perceberam-se alguns insights importantes para a conclusão de alguns informações relevantes quanto o motivo do cancelamento do serviço por parte de alguns clientes.\n",
+        "Fazendo uma análise do arquivo TelecomX_Data.json, perceberam-se alguns insights importantes para a conclusão de algumas relevantes informações quanto o motivo do cancelamento do serviço por parte de certos clientes.\n",
+        "\n",
         "Vejamos eles:\n",
-        "Primeiro, 1869 pessoas cancelaram o serviço, enquanto 5174 permaneceram como clientes.\n",
-        "Segundo, 939 mulheres cancelaram o serviço enquanto 930 homens fizeram o mesmo.\n",
-        "Terceiro, foram, na grande na maioria, mais clientes não idosos (1393 clientes), ou seja, clientes abaixo de 65 anos, do que clientes idosos (476 clientes) que cancelaram o serviço."
+        "\n",
+        "Primeiro, 1869 pessoas cancelaram o serviço - isso implica em um total de aproximadamente 25% do total de cientes, enquanto 5174 permaneceram como clientes de uma lista total de 7267 clientes.\n",
+        "\n",
+        "Segundo, desses 1869 cancelamentos, 939 são mulheres, enquanto 930 são homens.\n",
+        "\n",
+        "Terceiro, a maior parte dos cancelamentos se deu, na grande na maioria, por clientes não idosos (1393 clientes), ou seja, clientes abaixo de 65 anos que cancelaram o serviço, do que clientes idosos (com 476 clientes) que cancelaram o serviço."
       ]
     },
     {
