--- a/TelecomX_BR.ipynb
+++ b/TelecomX_BR.ipynb
@@ -1312,7 +1312,7 @@
         "\n",
         "Terceiro, a maior parte dos cancelamentos se deu, na grande na maioria, por clientes não idosos (1393 clientes), ou seja, clientes abaixo de 65 anos que cancelaram o serviço, do que os clientes idosos (com 476 clientes) que cancelaram o serviço.\n",
         "\n",
-        "Quarto, 319 mulheres assinantes têm parceiros, no tempo em que 620 não têm parceiros. Dentre os homens assinantes, 350 têm parceiros, enquanto 580 não têm parceiros. Assinantes que têm parceiros são 669, enquanto 1200 assinantes não têm parceiros."
+        "Quarto, são 319 mulheres desistentes da assinatura que têm parceiro, no tempo em que, são 620 que não têm parceiro. Dentre os homens desistentes, são 350 que têm parceiro, enquanto 580 não têm parceiro. Sendo assim, são 669 desistentes que têm parceiro e 1200 desistentes que não têm parceiro. Desta forma, observa-se que o número de desistentes que não possuem parceiro é quase o dobro do que os desistentes com parceiros. Em outras palavras, cancelam mais os clientes que não têm parceiro na cobertura. Talvez porque tal parceiro possa estar contribuindo no pagamento do serviço."
       ]
     },
     {
