--- a/TelecomX_BR.ipynb
+++ b/TelecomX_BR.ipynb
@@ -1077,6 +1077,30 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 31,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Churn\n",
+              "não      5174\n",
+              "sim      1869\n",
+              "dtype: int64"
+            ]
+          },
+          "execution_count": 31,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "churn3 = churn.value_counts()\n",
+        "churn3"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 18,
       "metadata": {},
       "outputs": [
@@ -1267,26 +1291,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 30,
       "metadata": {},
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "Churn\n",
-              "não      5174\n",
-              "sim      1869\n",
-              "dtype: int64"
-            ]
-          },
-          "execution_count": 22,
-          "metadata": {},
-          "output_type": "execute_result"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Total de desistentes COM parceiro: 669\n",
+            "Total de desistentes SEM parceiro: 1200\n"
+          ]
         }
       ],
       "source": [
-        "churn3 = churn.value_counts()\n",
-        "churn3"
+        "# Considerando que 'Partner' tem valores 'Yes' (tem parceiro) e 'No' (não tem parceiro)\n",
+        "# e que a coluna 'Churn' já está traduzida para 'sim'/'não'\n",
+        "\n",
+        "# Filtra apenas os desistentes\n",
+        "desistentes = dados_normalizados2.copy()\n",
+        "desistentes['Partner'] = dados_normalizados2['Partner']\n",
+        "desistentes['Churn'] = dados['Churn'].values\n",
+        "\n",
+        "# Filtra apenas quem cancelou\n",
+        "desistentes = desistentes[desistentes['Churn'] == 'sim']\n",
+        "\n",
+        "# Conta os desistentes com e sem parceiro\n",
+        "totais = desistentes['Partner'].value_counts()\n",
+        "\n",
+        "print(\"Total de desistentes COM parceiro:\", totais.get('Yes', 0))\n",
+        "print(\"Total de desistentes SEM parceiro:\", totais.get('No', 0))"
       ]
     },
     {
